// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`syncApplication should return workspace migration actions on initial sync then on second sync with field rename and new role 1`] = `
{
  "syncApplication": {
    "actions": [
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "description": "A support ticket",
          "duplicateCriteria": null,
          "icon": "IconTicket",
          "imageIdentifierFieldMetadataUniversalIdentifier": null,
          "isActive": true,
          "isAuditLogged": true,
          "isCustom": true,
          "isLabelSyncedWithName": true,
          "isRemote": false,
          "isSearchable": false,
          "isSystem": false,
          "isUIReadOnly": false,
          "labelIdentifierFieldMetadataUniversalIdentifier": Any<String>,
          "labelPlural": "Tickets",
          "labelSingular": "Ticket",
          "namePlural": "tickets",
          "nameSingular": "ticket",
          "shortcut": null,
          "standardOverrides": null,
          "targetTableName": "DEPRECATED",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "objectMetadata",
        "type": "create",
        "universalFlatFieldMetadatas": [
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "Ticket description",
            "icon": "IconFileDescription",
            "isActive": true,
            "isCustom": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": false,
            "isUIReadOnly": false,
            "isUnique": false,
            "label": "Description",
            "morphId": null,
            "name": "description",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "TEXT",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
        ],
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "canAccessAllTools": false,
          "canBeAssignedToAgents": true,
          "canBeAssignedToApiKeys": true,
          "canBeAssignedToUsers": true,
          "canDestroyAllObjectRecords": false,
          "canReadAllObjectRecords": false,
          "canSoftDeleteAllObjectRecords": false,
          "canUpdateAllObjectRecords": false,
          "canUpdateAllSettings": false,
          "createdAt": Any<String>,
          "description": "A test role",
          "icon": null,
          "isEditable": true,
          "label": "Test Role",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "role",
        "type": "create",
      },
    ],
    "applicationUniversalIdentifier": Any<String>,
  },
}
`;

exports[`syncApplication should return workspace migration actions on initial sync then on second sync with field rename and new role 2`] = `
{
  "syncApplication": {
    "actions": [
      {
        "metadataName": "fieldMetadata",
        "type": "update",
        "universalIdentifier": Any<String>,
        "update": {
          "label": "Body",
          "name": "body",
        },
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "canAccessAllTools": false,
          "canBeAssignedToAgents": true,
          "canBeAssignedToApiKeys": true,
          "canBeAssignedToUsers": true,
          "canDestroyAllObjectRecords": false,
          "canReadAllObjectRecords": false,
          "canSoftDeleteAllObjectRecords": false,
          "canUpdateAllObjectRecords": false,
          "canUpdateAllSettings": false,
          "createdAt": Any<String>,
          "description": "A read-only role",
          "icon": null,
          "isEditable": true,
          "label": "Viewer Role",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "role",
        "type": "create",
      },
    ],
    "applicationUniversalIdentifier": Any<String>,
  },
}
`;
